# neural-boundary-game

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CI_117.md  CI_37.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOGE.json  EVIDENCE_REPORT.md  FOUNDATION_STANDARD.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  LOCAL_CHECK_REPORT.txt  PAYMENT_CONFIG.json  PRIVACY_NOTICE.md  README.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_CONTACTS.md  SOURCE_MANIFEST.sha256  TERMS_OF_USE.md  THIRD_PARTY_NOTICES.md  Trunk.toml  VERSION  cleanup_release_after_push.sh  index.html  package.json  push_only_termux.sh  release.toml  rust-toolchain.toml  service-worker.js
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SIGNED-COMMIT-CHECK.txt  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md
.github/workflows/: ci-43-professional.yml  ci.yml  gameplay-ux-ci-8.yml  pages.yml  pro-ci-57.yml  release.yml
LICENSES/: AGPL-3.0-only.txt  CC-BY-NC-ND-4.0.txt  LicenseRef-AxonOS-Commercial.txt
crates/neural-boundary-cli/: Cargo.toml
crates/neural-boundary-cli/src/: bot.rs  main.rs
crates/neural-boundary-cli/tests/: vectors.rs
crates/neural-boundary-core/: Cargo.toml
crates/neural-boundary-core/src/: actions.rs  combo.rs  events.rs  grade.rs  hash.rs  lib.rs  metrics.rs  proof.rs  replay.rs  scenario.rs  scoring.rs  state.rs  threat.rs
crates/neural-boundary-core/tests/: action_gate.rs  invariants.rs  replay_vectors.rs  scoring.rs  terminal_overrides.rs
crates/neural-boundary-web/: Cargo.toml
crates/neural-boundary-web/src/: accessibility.rs  app.rs  bridge.rs  hud.rs  input.rs  lib.rs  render.rs  storage.rs
crates/neural-boundary-web/tests/: abi.rs
docs/: ABI_CONTRACT.md  API_SURFACE.md  ARCHITECTURE.md  AXONOS_STANDARD_STYLE.md  BCI_BOUNDARY.md  CI_REPAIR_NOTES.md  CLAIM_HYGIENE.md  COMMERCIAL_SERVICES.md  GAMEPLAY.md  GAME_SPEC.md  GITHUB_SETUP.md  LIMITATIONS.md  NO_RAW_NEURAL_DATA.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  REPLAY_SPEC.md  ROADMAP.md  THREAT_MODEL.md  UX_STANDARD.md  index.html
qa/: package.json  playwright.config.ts
qa/tests/: smoke.spec.ts
scripts/: build_web.sh  ci_37_gate.sh  configure_github_about.sh  create_release_tag.sh  enable_pages_docs_source.sh  fix_public_surface.sh  force_clean_push_signed.sh  http_smoke.sh  local_push_no_force_signed.sh  serve_dist.sh  smoke_check.sh  termux_find_unpack_push.sh  termux_push.sh  termux_release.sh  verify_release.sh
tools/: build_evidence_report.py  check_abi_exports.py  check_docs.py  check_hygiene.py  check_license.py  check_links.py  check_preview.py  check_pwa_cache.py  check_source_manifest.py  check_version_consistency.py  check_versions.py  ci_117_lane.py  ci_37_gate.py  ci_lane.sh  deep_audit.py  generate_manifest.py  generate_preview.py  generate_source_manifest.py  generate_vectors.py  package_release.py  reference_model.py  release_check.py  validate_replay.py  validate_replays.py
vectors/: 01-clean-boundary-sealed.json  01-clean-sealed.json  01-standard-clean-sealed.json  02-clean-boundary-timeout-reviewable.json  02-idle-breach.json  02-standard-idle-risk-overflow.json  03-raw-leak-breached.json  03-revoked-consent.json  03-standard-lapse-revocations-sealed.json  04-raw-leak-sealed.json  04-raw-leak.json  04-standard-idle-raw-leak-limit.json  05-consent-drift-sealed.json  05-standard-idle-stimulation.json  05-stimulation-fail-closed.json  06-audit-clean-sealed.json  06-audit-sealed.json  06-consent-collapse.json  07-grand-clean-sealed.json  07-grand-run-sealed.json  07-unsafe-stimulation.json  08-daily-2026-06-14-sealed.json  08-daily-seed-sealed.json  08-stimulation-throttled-sealed.json  09-latency-storm-reviewable.json  10-adversarial-probe-breached.json  11-adversarial-probe-sealed.json  12-vault-siege-breached.json  13-silent-escalation-breached.json  14-silent-escalation-reviewable.json  15-grand-trial-sealed.json  16-daily-seed-crosscheck.json  checksums.sha256  checksums.txt  replay-breach-demo-v2.1.2.json  replay-v1.0.3.json  replay-v1.3.0.json  replay-v1.4.0.json  replay-v1.5.0.json  replay-v1.6.0.json  (+7 more)
web/: a11y.js  abi.js  accessibility.js  app.js  audio.js  fallback.js  hud.js  index.html  main.js  neural_boundary_web.wasm  render.js  renderer.js  scenarios.js  self-heal.js  service-worker.js  storage.js  styles.css  wasm-loader.js
web/tests/: app.test.mjs  wasm-smoke.mjs
