[workspace]
resolver = "2"
members = [
    "crates/neural-boundary-core",
    "crates/neural-boundary-cli",
    "crates/neural-boundary-web",
]

[workspace.package]
version = "2.1.2"
edition = "2021"
authors = ["Denis Yermakou <connect@axonos.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AxonOS-BCI/neural-boundary-game"
homepage = "https://axonos-bci.github.io/neural-boundary-game/"
description = "AxonOS Standard Foundation Grande Rust/WASM demo: raw signal stays inside the device; apps receive typed intent only."
keywords = ["rust", "wasm", "bci", "no-std", "privacy"]
categories = ["games", "wasm", "embedded", "simulation"]
