[workspace]
resolver = "2"
members = [
  "crates/neural-boundary-core",
  "crates/neural-boundary-cli",
  "crates/neural-boundary-web",
]

[workspace.package]
version = "3.0.0"
edition = "2021"
rust-version = "1.81"
authors = ["Denis Yermakou <connect@axonos.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AxonOS-BCI/neural-boundary-game"
homepage = "https://axonos-bci.github.io/neural-boundary-game/"
description = "Deterministic Rust/WASM simulation of a sovereign neural-data boundary: raw signal stays private; applications receive typed intent only."
keywords = ["rust", "webassembly", "bci", "privacy", "deterministic"]
categories = ["games", "wasm", "embedded", "simulation"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"
