[package]
name = "neural-boundary-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Replay verifier and deterministic vector tooling for Neural Boundary Game."

[[bin]]
name = "neural-boundary"
path = "src/main.rs"

[dependencies]
neural-boundary-core = { path = "../neural-boundary-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
