[package]
name = "neural-boundary-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Flat WASM ABI adapter for Neural Boundary Game v5.5.12."

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
neural-boundary-core = { path = "../neural-boundary-core" }
